improve traning api & engine